[package]
name = "cc-host-mapper"
version = "0.1.0"
authors = ["Mingwei Zhang <mingwei@mwzhang.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
flate2 = "1"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
rayon = "1.5"

# cli interactions
clap = "3.0.0-beta.2"
indicatif = "0.15"
dialoguer = "0.7"
