[package]
name = "cc-host-mapper"
version = "0.1.0"
authors = ["Mingwei Zhang <mingwei@mwzhang.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/CAIDA/commoncrawl-host-ip-mapper"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
flate2 = "1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
rayon = "1.5"

# cli interactions
clap = { version = "4.5.46", features = ["derive"] }
indicatif = "0.18.0"
dialoguer = "0.12.0"
